# tinder_auto

./: .gitignore  .gitmodules  common.py  event_listener.py  events.py  pyproject.toml  readme.md  session.py  storage.py  swipeEventListener.js  timer.py  tinder_auto.py  web_service.py
templates/: base.html  profile.html
