[tool.poetry]
name = "tinder-auto"
version = "0.1.0"
description = ""
authors = ["Mark R <theiterance@gmail.com>"]
readme = "README.md"
packages = [{include = "tinder_auto"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.18.1"
undetected-chromedriver = "^3.5.5"
pillow = "^10.2.0"
loguru = "^0.7.2"
black = "^24.2.0"
requests = "^2.31.0"
tinderbotz = {path = "TinderBotz", develop = true}
webdriver-manager = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
